--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,15 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: calc(10px + 1vw);
+}
+
+main {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
